--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>Phaser Game</title>
+    <title>Phaser Webpack</title>
   </head>
   <body>
-  <script type="text/javascript" src="phaser.5c28962df44a3776b357.js"></script><script type="text/javascript" src="index.0f25ef4e4454c4a1f992.js"></script></body>
+  <script type="text/javascript" src="phaser.d7c26b2a63fb9d2d616f.js"></script><script type="text/javascript" src="index.729285bf2517e0878d5a.js"></script></body>
 </html>
