--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>Phaser Webpack</title>
-  </head>
-  <body>
-  <script type="text/javascript" src="phaser.d7c26b2a63fb9d2d616f.js"></script><script type="text/javascript" src="index.2cfc550be9495315022a.js"></script></body>
-</html>
+<!doctype html><html><head><meta http-equiv="Content-type" content="text/html; charset=utf-8"/><title>Phaser Webpack</title></head><body><script defer="defer" src="phaser.022da6a3e695b11bdcf1.js"></script><script defer="defer" src="main.0edbb023a605fee49cd7.js"></script></body></html>
